--- a/pt-BR/browser/chrome/browser/devtools/app-manager.properties
+++ b/pt-BR/browser/chrome/browser/devtools/app-manager.properties
@@ -29,7 +29,7 @@ validator.invalidProjectType=Tipo de projeto desconhecido “%S”
 # don't translate 'icons' and 'name'.
 validator.missNameManifestProperty=“name” obrigatório ausente do manifesto.
 validator.missIconsManifestProperty=“icons” ausente do manifesto.
-validator.missIconMarketplace=para enviar um aplicativo para o Marketplace é necessário pelo menos um ícone de 128px
+validator.missIconMarketplace2=para envio de aplicativos para o Marketplace é obrigatório um ícone de 128px
 validator.invalidAppType=Tipo de aplicativo desconhecido: “%S”.
 validator.invalidHostedPriviledges=Aplicativo hospedado não pode ser do tipo “%S”.
 validator.noCertifiedSupport=aplicativos “certified” não são totalmente suportados pelo App Manager.
