--- a/pt-BR/browser/chrome/browser/devtools/gclicommands.properties
+++ b/pt-BR/browser/chrome/browser/devtools/gclicommands.properties
@@ -128,6 +128,113 @@ screenshotCopied=Copiada para a área de transferência.
 # LOCALIZATION NOTE (screenshotTooltip) Text displayed as tooltip for screenshot button in devtools ToolBox.
 screenshotTooltip=Capturar tela da página inteira
 
+# LOCALIZATION NOTE (highlightDesc) A very short description of the
+# 'highlight' command. See highlightManual for a fuller description of what
+# it does. This string is designed to be shown in a menu alongside the
+# command name, which is why it should be as short as possible.
+highlightDesc=Realça nós
+
+# LOCALIZATION NOTE (highlightManual) A fuller description of the 'highlight'
+# command, displayed when the user asks for help on what it does.
+highlightManual=Realça os nós que correspondem a um seletor na página
+
+# LOCALIZATION NOTE (highlightSelectorDesc) A very short string to describe
+# the 'selector' parameter to the 'highlight' command, which is displayed in
+# a dialog when the user is using this command.
+highlightSelectorDesc=Seletor CSS
+
+# LOCALIZATION NOTE (highlightSelectorManual) A fuller description of the
+# 'selector' parameter to the 'highlight' command, displayed when the user
+# asks for help on what it does.
+highlightSelectorManual=Seletor CSS usado para selecionar nós na página
+
+# LOCALIZATION NOTE (highlightOptionsDesc) The title of a set of options to
+# the 'highlight' command, displayed as a heading to the list of option.
+highlightOptionsDesc=Opções
+
+# LOCALIZATION NOTE (highlightHideGuidesDesc) A very short string to describe
+# the 'hideguides' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightHideGuidesDesc=Oculta guias
+
+# LOCALIZATION NOTE (highlightHideGuidesManual) A fuller description of the
+# 'hideguides' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightHideGuidesManual=Oculta guias ao redor do nó realçado
+
+# LOCALIZATION NOTE (highlightShowInfoBarDesc) A very short string to describe
+# the 'showinfobar' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightShowInfoBarDesc=Exibe a barra de propriedades do nó
+
+# LOCALIZATION NOTE (highlightShowInfoBarManual) A fuller description of the
+# 'showinfobar' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightShowInfoBarManual=Exibe a barra de propriedades acima do nó realçado (a barra exibe o nome da tag, atributos e dimensões)
+
+# LOCALIZATION NOTE (highlightShowAllDesc) A very short string to describe
+# the 'showall' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightShowAllDesc=Exibe todas as correspondências
+
+# LOCALIZATION NOTE (highlightShowAllManual) A fuller description of the
+# 'showall' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightShowAllManual=Se houver muitos nós que correspondam ao seletor, apenas as primeiras 100 ocorrências serão mostradas para evitar que a página fique muito lenta. Use esta opção para exibir todas as correspondências
+
+# LOCALIZATION NOTE (highlightRegionDesc) A very short string to describe the
+# 'region' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightRegionDesc=Região da caixa
+
+# LOCALIZATION NOTE (highlightRegionManual) A fuller description of the 'region'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightRegionManual=Que região da caixa deve ser realçada: “content”, “padding”, “border” ou “margin”
+
+# LOCALIZATION NOTE (highlightFillDesc) A very short string to describe the
+# 'fill' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightFillDesc=Estilo de preenchimento
+
+# LOCALIZATION NOTE (highlightFillManual) A fuller description of the 'fill'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightFillManual=Substitui o estilo de preenchimento de região padrão por uma cor personalizada
+
+# LOCALIZATION NOTE (highlightKeepDesc) A very short string to describe the
+# 'keep' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightKeepDesc=Mantém realçamentos existentes
+
+# LOCALIZATION NOTE (highlightKeepManual) A fuller description of the 'keep'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightKeepManual=Por padrão, realçamentos existentes são ocultos ao executar o comando, a menos que esta opção esteja definida
+
+# LOCALIZATION NOTE (highlightOutputConfirm) A confirmation message for the
+# 'highlight' command, displayed to the user once the command has been entered,
+# informing the user how many nodes have been highlighted successfully and how
+# to turn highlighting off
+highlightOutputConfirm=%1$S nós realçados
+
+# LOCALIZATION NOTE (highlightOutputMaxReached) A confirmation message for the
+# 'highlight' command, displayed to the user once the command has been entered,
+# informing the user how many nodes have been highlighted successfully and that
+# some nodes could not be highlighted due to the maximum number of nodes being
+# reached, and how to turn highlighting off
+highlightOutputMaxReached=%1$S nós encontrados, mas apenas %2$S realçados. Use “--showall” para exibir todos
+
+# LOCALIZATION NOTE (unhighlightDesc) A very short description of the
+# 'unhighlight' command. See unhighlightManual for a fuller description of what
+# it does. This string is designed to be shown in a menu alongside the
+# command name, which is why it should be as short as possible.
+unhighlightDesc=Desrealça todos os nós
+
+# LOCALIZATION NOTE (unhighlightManual) A fuller description of the 'unhighlight'
+# command, displayed when the user asks for help on what it does.
+unhighlightManual=Desrealça todos os nós anteriormente realçados com o comando “highlight”
+
 # LOCALIZATION NOTE (restartBrowserDesc) A very short description of the
 # 'restart' command. This string is designed to be shown in a menu alongside the
 # command name, which is why it should be as short as possible.
@@ -1391,3 +1498,29 @@ mediaEmulateDesc=Emula um tipo especificado de mídia CSS
 mediaEmulateManual=Exibe o documento como se renderizado em um dispositivo que suporta o tipo de mídia especificado, com as regras CSS relevantes aplicadas.
 mediaEmulateType=O tipo de mídia a emular
 mediaResetDesc=Para de emular o tipo de mídia CSS
+
+# LOCALIZATION NOTE (injectDesc, injectManual, injectLibraryDesc, injectLoaded,
+# injectFailed) These strings describe the 'inject' commands and all available
+# parameters.
+injectDesc=Injeta bibliotecas comuns na página
+injectManual2=Injeta bibliotecas comuns no conteúdo da página que podem ser acessadas também pelo console.
+injectLibraryDesc=Seleciona a biblioteca a injetar ou fornece uma URI de script válida a injetar
+injectLoaded=%1$S carregado
+injectFailed=Falha ao carregar %1$S - URI inválida
+
+# LOCALIZATION NOTE (folderDesc, folderOpenDesc, folderOpenDir,
+# folderOpenProfileDesc) These strings describe the 'folder' commands and
+# all available parameters.
+folderDesc=Abre pastas
+folderOpenDesc=Abre caminho da pasta
+folderOpenDir=Caminho do diretório
+folderOpenProfileDesc=Abre diretório do perfil
+
+# LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
+# of the 'folder open' command with an invalid folder path.
+folderInvalidPath=Por favor, forneça um caminho válido
+
+# LOCALIZATION NOTE (folderOpenDirResult) A very short string used to
+# describe the result of the 'folder open' command.
+# The argument (%1$S) is the folder path.
+folderOpenDirResult=Aberto %1$S
