--- a/pt-BR/browser/chrome/browser/devtools/inspector.properties
+++ b/pt-BR/browser/chrome/browser/devtools/inspector.properties
@@ -37,6 +37,11 @@ inspector.label=Inspecionar
 inspector.commandkey=i
 inspector.accesskey=I
 
+# LOCALIZATION NOTE (inspector.panelLabel.*)
+# Labels applied to the panel and views within the panel in the toolbox
+inspector.panelLabel=Painel Inspecionar
+inspector.panelLabel.markupView=Markup View
+
 # LOCALIZATION NOTE (markupView.more.*)
 # When there are too many nodes to load at once, we will offer to
 # show all the nodes.
@@ -46,3 +51,6 @@ inspector.tooltip=DOM e inspeção de estilos
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
 previewTooltip.image.brokenImage=Não foi possível carregar a imagem
+
+#LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
+eventsTooltip.openInDebugger=Abrir depurador
