--- a/pt-BR/browser/chrome/browser/devtools/webconsole.properties
+++ b/pt-BR/browser/chrome/browser/devtools/webconsole.properties
@@ -167,6 +167,10 @@ MenuWebconsole.label=Console da web
 # label of the tab in the devtools window.
 ToolboxTabWebconsole.label=Console
 
+# LOCALIZATION NOTE (ToolboxWebConsole.panelLabel): the string used as the
+# label for the toolbox panel.
+ToolboxWebConsole.panelLabel=Painel console
+
 # LOCALIZATION NOTE (ToolboxWebconsole.tooltip): the string displayed in the
 # tooltip of the tab when the Web Console is displayed inside the developer
 # tools window.
