--- a/pt-BR/browser/chrome/browser/devtools/gcli.properties
+++ b/pt-BR/browser/chrome/browser/devtools/gcli.properties
@@ -168,14 +168,18 @@ helpManRequired=obrigatório
 helpManOptional=opcional
 helpManDefault=opcional, padrão=%S
 
-# LOCALIZATION NOTE (helpIntro): This forms part of the output from the 'help'
-# command. 'GCLI' is a project name and should be left untranslated.
+# LOCALIZATION NOTE: This forms part of the output from the 'help' command.
+# 'GCLI' is a project name and should be left untranslated.
 helpIntro=A GCLI é um experimento para criar uma linha de comando altamente usável para desenvolvedores web.
 
 # LOCALIZATION NOTE: Text shown as part of the output of the 'help' command
 # when the command in question has sub-commands, before a list of the matching
 # sub-commands.
 subCommands=Subcomandos
+
+# LOCALIZATION NOTE: This error message is displayed when the command line is
+# cannot find a match for the parse types.
+commandParseError=Erro no processamento da linha de comando
 
 # LOCALIZATION NOTE (contextDesc, contextManual, contextPrefixDesc): These
 # strings are used to describe the 'context' command and its 'prefix'
