--- a/pt-BR/browser/chrome/browser/devtools/profiler.properties
+++ b/pt-BR/browser/chrome/browser/devtools/profiler.properties
@@ -15,6 +15,10 @@
 # displayed inside the developer tools window and in the Developer Tools Menu.
 profiler.label=Desempenho
 
+# LOCALIZATION NOTE (profiler.panelLabel):
+# This is used as the label for the toolbox panel.
+profiler.panelLabel=Painel Desempenho
+
 # LOCALIZATION NOTE (profiler2.commandkey, profiler.accesskey)
 # Used for the menuitem in the tool menu
 profiler2.commandkey=VK_F5
