--- a/pt-BR/browser/chrome/browser/devtools/projecteditor.properties
+++ b/pt-BR/browser/chrome/browser/devtools/projecteditor.properties
@@ -13,37 +13,61 @@
 
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
-# file / folder to be deleted
+# file / folder to be deleted.
 projecteditor.deleteLabel=Excluir
 
+# LOCALIZATION NOTE (projecteditor.deletePromptTitle):
+# This string is displayed as as the title of the confirm prompt that checks
+# to make sure if a file or folder should be removed.
+projecteditor.deletePromptTitle=Excluir
+
+# LOCALIZATION NOTE (projecteditor.deleteFolderPromptMessage):
+# This string is displayed as as the message of the confirm prompt that checks
+# to make sure if a folder should be removed.
+projecteditor.deleteFolderPromptMessage=Tem certeza que deseja excluir esta pasta?
+
+# LOCALIZATION NOTE (projecteditor.deleteFilePromptMessage):
+# This string is displayed as as the message of the confirm prompt that checks
+# to make sure if a file should be removed.
+projecteditor.deleteFilePromptMessage=Tem certeza que deseja excluir este aquivo?
+
 # LOCALIZATION NOTE (projecteditor.newLabel):
-# This string is displayed as a context menu item for adding a new file to
-# the directory
+# This string is displayed as a menu item for adding a new file to
+# the directory.
 projecteditor.newLabel=Novo…
 
+# LOCALIZATION NOTE (projecteditor.saveLabel):
+# This string is displayed as a menu item for saving the current file.
+projecteditor.saveLabel=Salvar
+
+# LOCALIZATION NOTE (projecteditor.saveAsLabel):
+# This string is displayed as a menu item for saving the current file
+# with a new name.
+projecteditor.saveAsLabel=Salvar como…
+
 # LOCALIZATION NOTE (projecteditor.selectFileLabel):
-# This string is displayed as the title on the file picker when saving a file
+# This string is displayed as the title on the file picker when saving a file.
 projecteditor.selectFileLabel=Selecionar um arquivo
 
 # LOCALIZATION NOTE (projecteditor.openFolderLabel):
-# This string is displayed as the title on the file picker when opening a folder
+# This string is displayed as the title on the file picker when opening a folder.
 projecteditor.openFolderLabel=Selecionar uma pasta
 
 # LOCALIZATION NOTE (projecteditor.openFileLabel):
-# This string is displayed as the title on the file picker when opening a file
+# This string is displayed as the title on the file picker when opening a file.
 projecteditor.openFileLabel=Abrir um arquivo
 
 # LOCALIZATION NOTE  (projecteditor.find.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to search
-# text in the files
+# text in the files.
 projecteditor.find.commandkey=f
 
 # LOCALIZATION NOTE  (projecteditor.save.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to
-# save the file.  It is used with accel+shift to "save as"
+# save the file.  It is used with accel+shift to "save as".
 projecteditor.save.commandkey=s
 
 # LOCALIZATION NOTE  (projecteditor.new.commandkey): This is the key to use in
 # conjunction with accel (Command on Mac or Ctrl on other platforms) to
-# create a new file
+# create a new file.
 projecteditor.new.commandkey=n
