--- a/pt-BR/browser/chrome/browser/devtools/scratchpad.properties
+++ b/pt-BR/browser/chrome/browser/devtools/scratchpad.properties
@@ -95,6 +95,10 @@ connectionTimeout=Atingido o tempo limite de conexão. Verifique o console de er
 # in the Developer Tools Menu.
 scratchpad.label=Scratchpad
 
+# LOCALIZATION NOTE (scratchpad.panelLabel): this is used as the
+# label for the toolbox panel.
+scratchpad.panelLabel=Painel Scratchpad
+
 # LOCALIZATION NOTE (scratchpad.tooltip):  This string is displayed in the
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
