--- a/pt-BR/browser/chrome/browser/devtools/styleeditor.properties
+++ b/pt-BR/browser/chrome/browser/devtools/styleeditor.properties
@@ -73,6 +73,10 @@ saveStyleSheet.commandkey=s
 # displayed inside the developer tools window and in the Developer Tools Menu.
 ToolboxStyleEditor.label=Editar estilos
 
+# LOCALIZATION NOTE (ToolboxStyleEditor.panelLabel):
+# This is used as the label for the toolbox panel.
+ToolboxStyleEditor.panelLabel=Painel do editor de estilos
+
 # LOCALIZATION NOTE (ToolboxStyleEditor.tooltip2):
 # This string is displayed in the tooltip of the tab when the style editor is
 # displayed inside the developer tools window.
