--- a/pt-BR/browser/chrome/browser/devtools/toolbox.properties
+++ b/pt-BR/browser/chrome/browser/devtools/toolbox.properties
@@ -35,9 +35,17 @@ toolbox.titleTemplate=%1$S - %2$S
 # name when no tool is selected.
 toolbox.defaultTitle=Ferramentas do desenvolvedor
 
+# LOCALIZATION NOTE (toolbox.label): This is used as the label for the
+# toolbox as a whole
+toolbox.label=Ferramentas do desenvolvedor
+
 # LOCALIZATION NOTE (optionsButton.tooltip): This is used as the tooltip
 # for the options panel tab.
 optionsButton.tooltip=Opções da caixa de ferramentas
+
+# LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
+# toolbox panel.
+options.panelLabel=Painel de opções Toolbox
 
 # LOCALIZATION NOTE (options.toolNotSupported): This is the template
 # used to add a * marker to the label for the Options Panel tool checkbox for the
