Moz 33 update, first batch

--- a/hu/browser/chrome/browser/devtools/app-manager.properties
+++ b/hu/browser/chrome/browser/devtools/app-manager.properties
@@ -29,7 +29,7 @@ validator.invalidProjectType=Ismeretlen projekttípus: „%S”
 # don't translate 'icons' and 'name'.
 validator.missNameManifestProperty=Hiányzik a kötelező „name” a manifest fájlból.
 validator.missIconsManifestProperty=Hiányzik az „icons” a manifest fájlból.
-validator.missIconMarketplace=Az app beküldése a Marketplace-re legalább egy 128 képpontos ikont igényel
+validator.missIconMarketplace2=Az app beküldése a Marketplace-re egy 128 képpontos ikont igényel
 validator.invalidAppType=Ismeretlen app típus: „%S”.
 validator.invalidHostedPriviledges=A kiszolgálóoldali app nem lehet „%S” típusú.
 validator.noCertifiedSupport=A „certified” appok nem teljesen támogatottak az Appkezelőben.
