--- a/hu/browser/chrome/browser/devtools/gcli.properties
+++ b/hu/browser/chrome/browser/devtools/gcli.properties
@@ -168,14 +168,18 @@ helpManRequired=szükséges
 helpManOptional=elhagyható
 helpManDefault=elhagyható, alapértelmezett=%S
 
-# LOCALIZATION NOTE (helpIntro): This forms part of the output from the 'help'
-# command. 'GCLI' is a project name and should be left untranslated.
+# LOCALIZATION NOTE: This forms part of the output from the 'help' command.
+# 'GCLI' is a project name and should be left untranslated.
 helpIntro=A GCLI egy kísérlet jól használható parancssor létrehozására webfejlesztők számára.
 
 # LOCALIZATION NOTE: Text shown as part of the output of the 'help' command
 # when the command in question has sub-commands, before a list of the matching
 # sub-commands.
 subCommands=Alparancsok
+
+# LOCALIZATION NOTE: This error message is displayed when the command line is
+# cannot find a match for the parse types.
+commandParseError=Parancssor-feldolgozási hiba
 
 # LOCALIZATION NOTE (contextDesc, contextManual, contextPrefixDesc): These
 # strings are used to describe the 'context' command and its 'prefix'
