--- a/hu/browser/chrome/browser/devtools/gclicommands.properties
+++ b/hu/browser/chrome/browser/devtools/gclicommands.properties
@@ -128,6 +128,113 @@ screenshotCopied=Vágólapra másolva.
 # LOCALIZATION NOTE (screenshotTooltip) Text displayed as tooltip for screenshot button in devtools ToolBox.
 screenshotTooltip=Képernyőkép a teljes képernyőről
 
+# LOCALIZATION NOTE (highlightDesc) A very short description of the
+# 'highlight' command. See highlightManual for a fuller description of what
+# it does. This string is designed to be shown in a menu alongside the
+# command name, which is why it should be as short as possible.
+highlightDesc=Csomópontok kiemelése
+
+# LOCALIZATION NOTE (highlightManual) A fuller description of the 'highlight'
+# command, displayed when the user asks for help on what it does.
+highlightManual=Kiemeli az oldal egyik választójára illeszkedő csomópontokat
+
+# LOCALIZATION NOTE (highlightSelectorDesc) A very short string to describe
+# the 'selector' parameter to the 'highlight' command, which is displayed in
+# a dialog when the user is using this command.
+highlightSelectorDesc=CSS választó
+
+# LOCALIZATION NOTE (highlightSelectorManual) A fuller description of the
+# 'selector' parameter to the 'highlight' command, displayed when the user
+# asks for help on what it does.
+highlightSelectorManual=Az oldalon csomópontok illesztésére használt CSS-választó
+
+# LOCALIZATION NOTE (highlightOptionsDesc) The title of a set of options to
+# the 'highlight' command, displayed as a heading to the list of option.
+highlightOptionsDesc=Beállítások
+
+# LOCALIZATION NOTE (highlightHideGuidesDesc) A very short string to describe
+# the 'hideguides' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightHideGuidesDesc=Útmutatók elrejtése
+
+# LOCALIZATION NOTE (highlightHideGuidesManual) A fuller description of the
+# 'hideguides' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightHideGuidesManual=A kijelölt csomópont körüli útmutatók elrejtése
+
+# LOCALIZATION NOTE (highlightShowInfoBarDesc) A very short string to describe
+# the 'showinfobar' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightShowInfoBarDesc=A csomópont infosávjának megjelenítése
+
+# LOCALIZATION NOTE (highlightShowInfoBarManual) A fuller description of the
+# 'showinfobar' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightShowInfoBarManual=Infosáv megjelenítése a kiemelt csomópont fölött (az infosáv a címkenevet, attribútumokat és méretet jeleníti meg)
+
+# LOCALIZATION NOTE (highlightShowAllDesc) A very short string to describe
+# the 'showall' option parameter to the 'highlight' command, which is
+# displayed in a dialog when the user is using this command.
+highlightShowAllDesc=Minden találat megjelenítése
+
+# LOCALIZATION NOTE (highlightShowAllManual) A fuller description of the
+# 'showall' option parameter to the 'highlight' command, displayed when the
+# user asks for help on what it does.
+highlightShowAllManual=Ha túl sok csomópont illeszkedik a választóra, akkor csak az első 100 jelenik meg, az oldal lelassulásának elkerülése érdekében. Ezzel az összes találat megjeleníthető.
+
+# LOCALIZATION NOTE (highlightRegionDesc) A very short string to describe the
+# 'region' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightRegionDesc=Dobozmodell terület
+
+# LOCALIZATION NOTE (highlightRegionManual) A fuller description of the 'region'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightRegionManual=A dobozmodell melyik területe legyen kiemelve: „content”, „padding”, „border” vagy „margin”
+
+# LOCALIZATION NOTE (highlightFillDesc) A very short string to describe the
+# 'fill' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightFillDesc=Kitöltés stílusa
+
+# LOCALIZATION NOTE (highlightFillManual) A fuller description of the 'fill'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightFillManual=Az alapértelmezett területkitöltési stílus felülbírálása egyéni színnel
+
+# LOCALIZATION NOTE (highlightKeepDesc) A very short string to describe the
+# 'keep' option parameter to the 'highlight' command, which is displayed in a
+# dialog when the user is using this command.
+highlightKeepDesc=Meglévő kiemelők megtartása
+
+# LOCALIZATION NOTE (highlightKeepManual) A fuller description of the 'keep'
+# option parameter to the 'highlight' command, displayed when the user asks for
+# help on what it does.
+highlightKeepManual=Alapesetben a meglévő kiemelők elrejtésre kerülnek a parancs futtatásakor, hacsak ez nincs beállítva
+
+# LOCALIZATION NOTE (highlightOutputConfirm) A confirmation message for the
+# 'highlight' command, displayed to the user once the command has been entered,
+# informing the user how many nodes have been highlighted successfully and how
+# to turn highlighting off
+highlightOutputConfirm=%1$S csomópont kiemelve
+
+# LOCALIZATION NOTE (highlightOutputMaxReached) A confirmation message for the
+# 'highlight' command, displayed to the user once the command has been entered,
+# informing the user how many nodes have been highlighted successfully and that
+# some nodes could not be highlighted due to the maximum number of nodes being
+# reached, and how to turn highlighting off
+highlightOutputMaxReached=%1$S csomópont illeszkedik, de csak %2$S van kiemelve. A „--showall” használatával mind megjeleníthető.
+
+# LOCALIZATION NOTE (unhighlightDesc) A very short description of the
+# 'unhighlight' command. See unhighlightManual for a fuller description of what
+# it does. This string is designed to be shown in a menu alongside the
+# command name, which is why it should be as short as possible.
+unhighlightDesc=Minden csomópont kiemelésének megszüntetése
+
+# LOCALIZATION NOTE (unhighlightManual) A fuller description of the 'unhighlight'
+# command, displayed when the user asks for help on what it does.
+unhighlightManual=A „highlight” paranccsal korábban kiemelt csomópontok kiemelésének megszüntetése
+
 # LOCALIZATION NOTE (restartBrowserDesc) A very short description of the
 # 'restart' command. This string is designed to be shown in a menu alongside the
 # command name, which is why it should be as short as possible.
@@ -1391,3 +1498,29 @@ mediaEmulateDesc=Egy megadott CSS médiatípus emulálása
 mediaEmulateManual=A dokumentum megjelenítése, mintha a megadott médiatípust támogató eszközön jelenne meg a megfelelő CSS szabályok alkalmazásával.
 mediaEmulateType=Az emulálandó médiatípus
 mediaResetDesc=CSS médiatípus emulálásának leállítása
+
+# LOCALIZATION NOTE (injectDesc, injectManual, injectLibraryDesc, injectLoaded,
+# injectFailed) These strings describe the 'inject' commands and all available
+# parameters.
+injectDesc=Gyakori programkönyvtárak beszúrása az oldalba
+injectManual2=Gyakori programkönyvtárak beszúrása az oldal tartalmába, amelyek elérhetők a konzolból is.
+injectLibraryDesc=Válassza ki a beszúrandó programkönyvtárat, vagy írja be egy parancsfájl érvényes URL-jét
+injectLoaded=%1$S betöltve
+injectFailed=%1$S betöltése sikertelen – érvénytelen URI
+
+# LOCALIZATION NOTE (folderDesc, folderOpenDesc, folderOpenDir,
+# folderOpenProfileDesc) These strings describe the 'folder' commands and
+# all available parameters.
+folderDesc=Mappák megnyitása
+folderOpenDesc=Mappaútvonal megnyitása
+folderOpenDir=Könyvtár útvonala
+folderOpenProfileDesc=Profilkönyvtár megnyitása
+
+# LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
+# of the 'folder open' command with an invalid folder path.
+folderInvalidPath=Írjon be egy érvényes útvonalat
+
+# LOCALIZATION NOTE (folderOpenDirResult) A very short string used to
+# describe the result of the 'folder open' command.
+# The argument (%1$S) is the folder path.
+folderOpenDirResult=%1$S megnyitva
