--- a/hu/browser/chrome/browser/devtools/inspector.properties
+++ b/hu/browser/chrome/browser/devtools/inspector.properties
@@ -37,6 +37,11 @@ inspector.label=Vizsgáló
 inspector.commandkey=C
 inspector.accesskey=V
 
+# LOCALIZATION NOTE (inspector.panelLabel.*)
+# Labels applied to the panel and views within the panel in the toolbox
+inspector.panelLabel=Vizsgáló panel
+inspector.panelLabel.markupView=Jelölőnyelv nézet
+
 # LOCALIZATION NOTE (markupView.more.*)
 # When there are too many nodes to load at once, we will offer to
 # show all the nodes.
@@ -46,3 +51,6 @@ inspector.tooltip=DOM- és stílusvizsgáló
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
 previewTooltip.image.brokenImage=Nem sikerült betölteni a képet
+
+#LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
+eventsTooltip.openInDebugger=Megnyitás hibakeresőben
