--- a/hu/browser/chrome/browser/devtools/scratchpad.properties
+++ b/hu/browser/chrome/browser/devtools/scratchpad.properties
@@ -95,6 +95,10 @@ connectionTimeout=A kapcsolat túllépte az időkorlátot. Nézze meg a Hibakonz
 # in the Developer Tools Menu.
 scratchpad.label=Scratchpad
 
+# LOCALIZATION NOTE (scratchpad.panelLabel): this is used as the
+# label for the toolbox panel.
+scratchpad.panelLabel=Scratchpad panel
+
 # LOCALIZATION NOTE (scratchpad.tooltip):  This string is displayed in the
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
