--- a/hu/dom/chrome/dom/dom.properties
+++ b/hu/dom/chrome/dom/dom.properties
@@ -157,3 +157,54 @@ DataContainerEventWarning=A DataContainerEvent használata elavult. Használja h
 SendAsBinaryWarning=A nem szabványos sendAsBinary metódus elavult, és hamarosan eltávolításra kerül. Használja inkább a szabványos send(Blob data) metódust.
 # LOCALIZATION NOTE: Do not translate "window.controllers"
 Window_ControllersWarning=A window.controllers elavult. Ne használja UA felismerésre.
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Down" and "ArrowDown".
+KeyNameDownWarning=A KeyboardEvent.key „Down” értéke elavult, és át lesz nevezve „ArrowDown”-ra. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Left" and "ArrowLeft".
+KeyNameLeftWarning=A KeyboardEvent.key „Left” értéke elavult, és át lesz nevezve „ArrowLeft”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Right" and "ArrowRight".
+KeyNameRightWarning=A KeyboardEvent.key „Right” értéke elavult, és át lesz nevezve „ArrowRight”-ra. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Up" and "ArrowUp".
+KeyNameUpWarning=A KeyboardEvent.key „Up” értéke elavult, és át lesz nevezve „ArrowUp”-ra. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Crsel" and "CrSel".
+KeyNameCrselWarning=A KeyboardEvent.key „Crsel” értéke elavult, és át lesz nevezve „CrSel”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Del" and "Delete".
+KeyNameDelWarning=A KeyboardEvent.key „Del” értéke elavult, és át lesz nevezve „Delete”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Exsel" and "ExSel".
+KeyNameExselWarning=A KeyboardEvent.key „Exsel” értéke elavult, és át lesz nevezve „ExSel”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Menu" and "ContextMenu".
+KeyNameMenuWarning=A KeyboardEvent.key „Menu” értéke elavult, és át lesz nevezve „ContextMenu”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Esc" and "Escape".
+KeyNameEscWarning=A KeyboardEvent.key „Esc” értéke elavult, és át lesz nevezve „Escape”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Nonconvert" and "NonConvert".
+KeyNameNonconvertWarning=A KeyboardEvent.key „Nonconvert” értéke elavult, és át lesz nevezve „NonConvert”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "HalfWidth" and "Hankaku".
+KeyNameHalfWidthWarning=A KeyboardEvent.key „HalfWidth” értéke elavult, és át lesz nevezve „Hankaku”-ra. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "RomanCharacters", "Romaji" and "Eisu".
+KeyNameRomanCharactersWarning=A KeyboardEvent.key „RomanCharacters” értéke elavult, és át lesz nevezve „Romaji”-ra vagy meg lesz feleltetve az „Eisu”-nak. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FullWith" and "Zenkaku".
+KeyNameFullWidthWarning=A KeyboardEvent.key „FullWidth” értéke elavult, és át lesz nevezve „Zenkaku”-ra. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "SelectMedia" and "MediaSelect".
+KeyNameSelectMediaWarning=A KeyboardEvent.key „SelectMedia” értéke elavult, és át lesz nevezve „MediaSelect”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaNextTrack" and "MediaTrackNext".
+KeyNameMediaNextTrackWarning=A KeyboardEvent.key „MediaNextTrack” értéke elavult, és át lesz nevezve „MediaTrackNext”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "MediaPreviousTrack" and "MediaTrackPrevious".
+KeyNameMediaPreviousTrackWarning=A KeyboardEvent.key „MediaPreviousTrack” értéke elavult, és át lesz nevezve „MediaTrackPrevious”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Red" and "ColorF0Red".
+KeyNameRedWarning=A KeyboardEvent.key „Red” értéke elavult, és át lesz nevezve „ColorF0Red”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Green" and "ColorF1Green".
+KeyNameGreenWarning=A KeyboardEvent.key „Green” értéke elavult, és át lesz nevezve „ColorF1Green”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Yellow" and "ColorF2Yellow".
+KeyNameYellowWarning=A KeyboardEvent.key „Yellow” értéke elavult, és át lesz nevezve „ColorF2Yellow”-ra. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Blue" and "ColorF3Blue".
+KeyNameBlueWarning=A KeyboardEvent.key „Blue” értéke elavult, és át lesz nevezve „ColorF3Blue”-ra. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Live".
+KeyNameLiveWarning=A KeyboardEvent.key „Live” értéke elavult, és el lesz távolítva. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Apps".
+KeyNameAppsWarning=A KeyboardEvent.key „Apps” értéke elavult, és el lesz távolítva. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "FastFwd" and "MediaFastForward".
+KeyNameFastFwdWarning=A KeyboardEvent.key „FastFwd” értéke elavult, és át lesz nevezve „MediaFastForward”-ra. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key", "Zoom" and "ZoomToggle".
+KeyNameZoomWarning=A KeyboardEvent.key „Zoom” értéke elavult, és át lesz nevezve „ZoomToggle”-re. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+# LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
+KeyNameDeadKeysWarning=A KeyboardEvent.key „Dead” kezdetű értékei elavulta, és egyesítve lesznek a „Dead” értékké. További segítségért lásd: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
+ImportXULIntoContentWarning=A XUL csomópontok tartalomdokumentumba importálása elavult. Ez a funkcionalitás hamarosan eltávolításra kerülhet.
