--- a/hu/dom/chrome/layout/css.properties
+++ b/hu/dom/chrome/layout/css.properties
@@ -21,6 +21,8 @@ PEGatherMediaEOF=médialista vége az @import vagy @media szabályban
 PEGatherMediaNotComma=A médialistában a várt „,” helyett „%1$S” található.
 PEGatherMediaNotIdent=A médialistában a várt azonosító helyett „%1$S” található.
 PEGatherMediaReservedMediaType=A médiatípus keresésekor a foglalt „%1$S” kulcsszó megtalálva.
+PEParseSourceSizeListEOF=hosszérték az illeszkedő médiafeltételhez
+PEParseSourceSizeListNotComma=Az érték után a várt „,” helyett „%1$S” volt
 PEImportNotURI=Az @import szabályban a várt URI helyett „%1$S” található.
 PEImportBadURI=Érvénytelen URI az @import szabályban: „%1$S”.
 PEImportUnexpected=Az @import-ban nem várt „%1$S” található.
@@ -44,6 +46,14 @@ PESelectorListExtraEOF=„,” vagy „{”
 PESelectorListExtra=A várt „,” vagy „{” helyett „%1$S” található.
 PESelectorGroupNoSelector=Szelektor volt várva.
 PESelectorGroupExtraCombinator=Fityegő kombinátor.
+PECounterStyleNotIdent=A @counter-style szabály neveként azonosító szükséges.
+PECounterStyleBadName=A @counter-style szabály neve nem lehet „%1$S”.
+PECounterStyleBadBlockStart=A @counter-style szabályt kezdő várt „{” helyett „%1$S” található.
+PECounterStyleEOF=a @counter-style blokk záró „}” jele
+PECounterDescExpected=A várt számlálóleíró helyett „%1$S” található.
+PEUnknownCounterDesc=Ismeretlen „%1$S” leíró a @counter-style szabályban.
+PECounterExtendsNotIdent=Az extends rendszerhez várt azonosító helyett „%1$S” található.
+PECounterASWeight=Az additive-symbols leíró minden súlyának kisebbnek kell lennie az előző súlynál.
 PEClassSelEOF=osztálynév
 PEClassSelNotIdent=A várt osztályszelektor-azonosító helyett „%1$S” található.
 PETypeSelEOF=elemtípus
