--- a/hu/dom/chrome/plugins.properties
+++ b/hu/dom/chrome/plugins.properties
@@ -19,3 +19,6 @@ state_disabled=Tiltva
 mimetype_label=MIME-típus
 description_label=Leírás
 suffixes_label=Kiterjesztés
+
+openH264_name=Az OpenH264 videokodeket a Cisco Systems, Inc. biztosítja
+openH264_description=Webes videó lejátszása és videocsevegés használata.
