--- a/hu/browser/chrome/browser/devtools/debugger.properties
+++ b/hu/browser/chrome/browser/devtools/debugger.properties
@@ -15,6 +15,10 @@
 # displayed inside the developer tools window and in the Developer Tools Menu.
 ToolboxDebugger.label=Hibakereső
 
+# LOCALIZATION NOTE (ToolboxDebugger.panelLabel):
+# This is used as the label for the toolbox panel.
+ToolboxDebugger.panelLabel=Hibakereső panel
+
 # LOCALIZATION NOTE (DebuggerWindowTitle):
 # The title displayed for the debugger window.
 DebuggerWindowTitle=Böngésző hibakeresője
