--- a/hu/browser/chrome/browser/devtools/toolbox.properties
+++ b/hu/browser/chrome/browser/devtools/toolbox.properties
@@ -35,9 +35,17 @@ toolbox.titleTemplate=%1$S - %2$S
 # name when no tool is selected.
 toolbox.defaultTitle=Fejlesztői eszközök
 
+# LOCALIZATION NOTE (toolbox.label): This is used as the label for the
+# toolbox as a whole
+toolbox.label=Fejlesztői eszközök
+
 # LOCALIZATION NOTE (optionsButton.tooltip): This is used as the tooltip
 # for the options panel tab.
 optionsButton.tooltip=Eszközkészlet beállításai
+
+# LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
+# toolbox panel.
+options.panelLabel=Eszközkészlet beállításai panel
 
 # LOCALIZATION NOTE (options.toolNotSupported): This is the template
 # used to add a * marker to the label for the Options Panel tool checkbox for the
