--- a/hu/browser/chrome/browser/devtools/webaudioeditor.properties
+++ b/hu/browser/chrome/browser/devtools/webaudioeditor.properties
@@ -16,6 +16,10 @@
 # is displayed inside the developer tools window and in the Developer Tools Menu.
 ToolboxWebAudioEditor1.label=Webes hang
 
+# LOCALIZATION NOTE (ToolboxWebAudioEditor1.panelLabel):
+# This is used as the label for the toolbox panel.
+ToolboxWebAudioEditor1.panelLabel=Webes hang panel
+
 # LOCALIZATION NOTE (ToolboxWebAudioEditor1.tooltip):
 # This string is displayed in the tooltip of the tab when the Web Audio Editor is
 # displayed inside the developer tools window.
