--- a/hu/browser/chrome/browser/devtools/webconsole.properties
+++ b/hu/browser/chrome/browser/devtools/webconsole.properties
@@ -167,6 +167,10 @@ MenuWebconsole.label=Webkonzol
 # label of the tab in the devtools window.
 ToolboxTabWebconsole.label=Konzol
 
+# LOCALIZATION NOTE (ToolboxWebConsole.panelLabel): the string used as the
+# label for the toolbox panel.
+ToolboxWebConsole.panelLabel=Konzol panel
+
 # LOCALIZATION NOTE (ToolboxWebconsole.tooltip): the string displayed in the
 # tooltip of the tab when the Web Console is displayed inside the developer
 # tools window.
