--- a/hu/mobile/android/chrome/browser.properties
+++ b/hu/mobile/android/chrome/browser.properties
@@ -199,7 +199,7 @@ contextmenu.shareImage=Kép megosztása
 contextmenu.search=%S keresés
 contextmenu.saveImage=Kép mentése
 contextmenu.setImageAs=Kép beállítása mint
-contextmenu.addSearchEngine=Keresőszolgáltatás hozzáadása
+contextmenu.addSearchEngine2=Keresőszolgáltatás hozzáadása
 contextmenu.playMedia=Lejátszás
 contextmenu.pauseMedia=Szünet
 contextmenu.shareMedia=Videó megosztása
@@ -241,16 +241,6 @@ timer.start=%S: óra elindult
 # This string is used to display the result of the console.timeEnd() call.
 # %1$S=name of timer, %2$S=number of milliseconds
 timer.end=%1$S: %2$S ms
-
-# Webapps
-webapps.installTitle=Alkalmazás telepítése
-webapps.alertSuccess=Sikeresen telepítve
-# Shown when there is a generic problem installing an app
-webapps.installError=Hiba az alkalmazás telepítésekor
-# Shown when there is something wrong with an apps manifest
-webapps.manifestInstallError=Érvénytelen alkalmazásleírás
-# Shown when a network error prevented installing an app
-webapps.networkInstallError=Nem tölthető le a leírás
 
 # Click to play plugins
 clickToPlayPlugins.message2=%S tartalmának lejátszásához bővítmény szükséges. Aktiválja?
