--- a/hu/toolkit/chrome/global/devtools/csscoverage.properties
+++ b/hu/toolkit/chrome/global/devtools/csscoverage.properties
@@ -5,15 +5,17 @@
 # LOCALIZATION NOTE These strings are used in the 'csscoverage' command and in
 # the user interface that this command creates.
 
-# LOCALIZATION NOTE (csscoverageDesc, csscoverageStartDesc, csscoverageStopDesc,
-# csscoverageOneShotDesc, csscoverageToggleDesc, csscoverageReportDesc): Short
-# descriptions of the csscoverage commands
+# LOCALIZATION NOTE (csscoverageDesc, csscoverageStartDesc2,
+# csscoverageStopDesc2, csscoverageOneShotDesc2, csscoverageToggleDesc2,
+# csscoverageReportDesc2): Short descriptions of the csscoverage commands
 csscoverageDesc=CSS lefedettségi elemzés vezérlése
-csscoverageStartDesc=CSS lefedettségi elemzés adatgyűjtésének megkezdése
-csscoverageStopDesc=CSS lefedettségi elemzés adatgyűjtésének befejezése
-csscoverageOneShotDesc=CSS lefedettségi elemzés adatgyűjtésének befejezése
-csscoverageToggleDesc=CSS lefedettségi elemzés adatgyűjtése be/ki
-csscoverageReportDesc=CSS lefedettségi elemzés megjelenítése
+csscoverageStartDesc2=CSS lefedettségi adatok gyűjtésének megkezdése
+csscoverageStopDesc2=CSS lefedettségi adatok gyűjtésének leállítása
+csscoverageOneShotDesc2=Azonnali CSS lefedettségi adatok gyűjtése
+csscoverageToggleDesc2=CSS lefedettségi adatok gyűjtése be/ki
+csscoverageReportDesc2=CSS lefedettségi jelentés megjelenítése
+csscoverageStartNoReloadDesc=Ne kezdje az oldal újratöltésével
+csscoverageStartNoReloadManual=A legjobb az aktuális oldal újratöltésével kezdeni, mert akkor a teszt egy ismert ponton kezdődik, de lehetnek olyan okok, amik miatt ez nem kívánatos (például az oldal olyan állapotot tartalmaz, ami az újratöltéskor elveszne).
 
 # LOCALIZATION NOTE (csscoverageRunningReply, csscoverageDoneReply): Text that
 # describes the current state of the css coverage system
@@ -27,3 +29,4 @@ csscoverageRunningError=A CSS lefedettségi elemzés már fut
 csscoverageNotRunningError=A CSS lefedettségi elemzés nem fut
 csscoverageNotRunError=A CSS lefedettségi elemzés még nem futott
 csscoverageNoRemoteError=A cél nem támogatja a CSS lefedettségi elemzést
+csscoverageOneShotReportError=A CSS lefedettségi jelentés nem érhető el „egyszeri” adatokhoz. Használja az indítást/leállítást.
