--- a/hu/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/hu/toolkit/chrome/global/devtools/styleinspector.properties
@@ -35,6 +35,10 @@ rule.sourceElement=elem
 # e.g "Inherited from body#bodyID"
 rule.inheritedFrom=Örökölve innen: %S
 
+# LOCALIZATION NOTE (rule.keyframe): Shown for CSS Rules keyframe header.
+# Will be passed an identifier of the keyframe animation name.
+rule.keyframe=Kulcskeretek: %S
+
 # LOCALIZATION NOTE (rule.userAgentStyles): Shown next to the style sheet
 # link for CSS rules that were loaded from a user agent style sheet.
 # These styles will not be editable, and will only be visible if the
@@ -80,6 +84,14 @@ ruleView.contextmenu.copy=Másolás
 # the rule view context menu "Select all" entry.
 ruleView.contextmenu.copy.accessKey=M
 
+# LOCALIZATION NOTE (ruleView.contextmenu.copyColor): Text displayed in the rule
+# and computed view context menu when a color value was clicked.
+ruleView.contextmenu.copyColor=Szín másolása
+
+# LOCALIZATION NOTE (ruleView.contextmenu.copyColor.accessKey): Access key for
+# the rule and computed view context menu "Copy Color" entry.
+ruleView.contextmenu.copyColor.accessKey=z
+
 # LOCALIZATION NOTE (ruleView.contextmenu.showOrigSources): Text displayed in the rule view
 # context menu.
 ruleView.contextmenu.showOrigSources=Eredeti források megjelenítése
@@ -95,6 +107,14 @@ ruleView.contextmenu.showCSSSources=CSS források megjelenítése
 # LOCALIZATION NOTE (ruleView.contextmenu.showCSSSources.accessKey): Access key for
 # the rule view context menu "Show CSS sources" entry.
 ruleView.contextmenu.showCSSSources.accessKey=E
+
+# LOCALIZATION NOTE (ruleView.contextmenu.addRule): Text displayed in the
+# rule view context menu for adding a new rule to the element.
+ruleView.contextmenu.addRule=Szabály hozzáadása
+
+# LOCALIZATION NOTE (ruleView.contextmenu.addRule.accessKey): Access key for
+# the rule view context menu "Add rule" entry.
+ruleView.contextmenu.addRule.accessKey=h
 
 # LOCALIZATION NOTE (computedView.contextmenu.selectAll): Text displayed in the
 # computed view context menu.
