Bug 899753 - Part 1: Add the Table console output

--- a/pl/browser/chrome/browser/devtools/webconsole.properties
+++ b/pl/browser/chrome/browser/devtools/webconsole.properties
@@ -198,3 +198,8 @@ selfxss.okstring=zezwalaj na wklejanie
 messageToggleDetails=Przełącz szczegóły wiadomości
 
 emptySlotLabel=#1 pusty element;#1 puste elementy;#1 pustych elementów
+
+table.index=(indeks)
+table.iterationIndex=(indeks iteracji)
+table.key=Klucz
+table.value=Wartości
