--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -44,7 +44,7 @@ feedback_category_other=Inny:
 feedback_custom_category_text_placeholder=opis problemu
 feedback_submit_button=Wyślij
 feedback_back_button=Wstecz
-feedback_window_will_close_in=Okno zostanie zamknięte za {{countdown}} s
+feedback_window_will_close_in=Okno zostanie zamknięte za sekundę;Okno zostanie zamknięte za {{countdown}} sekundy;Okno zostanie zamknięte za {{countdown}} sekund
 
 share_email_subject2=Zaproszenie do rozmowy
 share_email_body2=Kliknij poniższy odnośnik, aby do mnie zadzwonić:\r\n\r\n{{callUrl}}
