Bug 1059021 - Added sign in/up link to the Loop panel footer

--- a/pl/browser/chrome/browser/loop/loop.properties
+++ b/pl/browser/chrome/browser/loop/loop.properties
@@ -51,3 +51,5 @@ share_email_body2=Kliknij poniższy odnośnik, aby do mnie zadzwonić:\r\n\r\n{{
 share_button=E-mail
 copy_url_button=Kopiuj
 copied_url_button=Skopiowano
+
+panel_footer_signin_or_signup_link=Zaloguj się lub utwórz konto
