--- a/sq/dom/chrome/layout/HtmlForm.properties
+++ b/sq/dom/chrome/layout/HtmlForm.properties
@@ -17,8 +17,8 @@ FileUpload=Ngarkim Kartelash
 # input field. The space needs be escaped in the property file to avoid 
 # trimming.
 IsIndexPromptWithSpace=Ky është një tregues i kërkueshëm. Jepni një fjalëkyç kërkimi:\u0020
-ForgotPostWarning=Formulari përmban enctype\=%S, por nuk përmban method\=post.  Po parashtrohet normalisht me method\=GET dhe pa "enctype" më mirë.
-ForgotFileEnctypeWarning=Formulari përmban një zë kartele, por nuk ka method\=POST dhe enctype\=multipart/form-data në formular.  Kartela nuk do të dërgohet.
+ForgotPostWarning=Formulari përmban enctype=%S, por nuk përmban method=post.  Po parashtrohet normalisht me method=GET dhe pa "enctype" më mirë.
+ForgotFileEnctypeWarning=Formulari përmban një zë kartele, por nuk ka method=POST dhe enctype=multipart/form-data në formular.  Kartela nuk do të dërgohet.
 # LOCALIZATION NOTE (DefaultFormSubject): %S will be replaced with brandShortName
 DefaultFormSubject=Postim Formulari prej %S
 CannotEncodeAllUnicode=U parashtrua një formular nën kodimin %S, i cili nuk mund të kodojë krejt shenjat Unikod, ndaj të dhënat që parashtron përdoruesi mund të jenë të dëmtuara. Për të shmangur këtë problem faqja do të duhej ndryshuar në mënyrë që formulari të parashtrohet nën kodimin UTF-8, ose duke e ndryshuar kodimin e vetë faqes si UTF-8, ose duke dhënë accept-charset=utf-8 te elementi i formularit.
