--- a/sq/dom/chrome/layout/layout_errors.properties
+++ b/sq/dom/chrome/layout/layout_errors.properties
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-ImageMapRectBoundsError=Atributi "coords" i shenjës <area shape\="rect"> nuk është i formatit "majtas,sipër,djathtas,poshtë".
+ImageMapRectBoundsError=Atributi "coords" i shenjës <area shape="rect"> nuk është i formatit "majtas,sipër,djathtas,poshtë".
 ImageMapCircleWrongNumberOfCoords=Atributi "coords" i shenjës <area shape="circle"> nuk është i formatit "qendër-x,qendër-y,rreze".
 ImageMapCircleNegativeRadius=Atributi "coords" i shenjës <area shape="circle"> ka rrënjë negative.
 ImageMapPolyWrongNumberOfCoords=Atributi "coords" i shenjës <area shape="poly"> nuk është i formatit "x1,y1,x2,y2 …".
