--- a/sq/dom/chrome/plugins.properties
+++ b/sq/dom/chrome/plugins.properties
@@ -18,3 +18,6 @@ state_disabled=E çaktivizuar
 mimetype_label=Lloj MIME
 description_label=Përshkrim
 suffixes_label=Prapashtesa
+
+openH264_name=Kodek Videosh OpenH264, i ofruar nga Cisco Systems, Inc.
+openH264_description=Luani video web dhe përdorni fjalosje me video.
