--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -36,4 +36,4 @@ network_disconnected=La conexión de red ha terminado abruptamente.
 connection_error_see_console_notification=La llamada falló; ve la consola para más detalles.
 ## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
 ## part between {{..}}
-legal_text_and_links=Al usar este producto aceptas <a target="_blank" href="{{terms_of_use_url}}">Términos de uso</a> y <a href="{{privacy_notice_url}}">Aviso de privacidad</a>.
+legal_text_and_links=Al usar este producto aceptas <a \\ target="_blank" href="{{terms_of_use_url}}">Términos de uso</a> y <a \\ href="{{privacy_notice_url}}">Aviso de privacidad</a>.
