--- a/sq/toolkit/chrome/global/devtools/csscoverage.properties
+++ b/sq/toolkit/chrome/global/devtools/csscoverage.properties
@@ -5,20 +5,22 @@
 # LOCALIZATION NOTE These strings are used in the 'csscoverage' command and in
 # the user interface that this command creates.
 
-# LOCALIZATION NOTE (csscoverageDesc, csscoverageStartDesc, csscoverageStopDesc,
-# csscoverageOneShotDesc, csscoverageToggleDesc, csscoverageReportDesc): Short
-# descriptions of the csscoverage commands
+# LOCALIZATION NOTE (csscoverageDesc, csscoverageStartDesc2,
+# csscoverageStopDesc2, csscoverageOneShotDesc2, csscoverageToggleDesc2,
+# csscoverageReportDesc2): Short descriptions of the csscoverage commands
 csscoverageDesc=Kontrollo analizë mbulimi CSS-je
-csscoverageStartDesc=Fillo grumbullimin e të dhënave për analizë mbulimi CSS-je
-csscoverageStopDesc=Ndale grumbullimin e të dhënave për analizë mbulimi CSS-je
-csscoverageOneShotDesc=Ndale grumbullimin e të dhënave për analizë mbulimi CSS-je
-csscoverageToggleDesc=Fillo/Ndale grumbullimin e të dhënave për analizë mbulimi CSS-je
-csscoverageReportDesc=Shfaq raportim analize mbulimi CSS-je
+csscoverageStartDesc2=Fillo grumbullim të dhënash mbulimi CSS-je
+csscoverageStopDesc2=Ndale grumbullimin e të dhënave për mbulim CSS-je
+csscoverageOneShotDesc2=Grumbullo të dhëna të atypëratyshme mbulimi CSS-je
+csscoverageToggleDesc2=Fillo/Ndale grumbullimin e të dhënave për mbulim CSS-je
+csscoverageReportDesc2=Shfaqe raportin e mbulimit CSS
+csscoverageStartNoReloadDesc=Mos fillo me ringarkim faqeje
+csscoverageStartNoReloadManual=Më e mira është t'ia fillojmë me ringarkimin e faqes së tanishme, ngaqë kështu prova fillohet nga një pikë e njohur, por mund të ketë arsye pse të mos duam ta bëjmë kështu (p.sh. faqja përmban gjendje që do të humbë gjatë ringarkimit)
 
 # LOCALIZATION NOTE (csscoverageRunningReply, csscoverageDoneReply): Text that
 # describes the current state of the css coverage system
 csscoverageRunningReply=Po bëhet analiza e të dhënave mbi mbulim CSS-je
-csscoverageDoneReply=Analiza e mbulimit CSS u plotësua
+csscoverageDoneReply=Analiza e Mbulimit CSS u plotësua
 
 # LOCALIZATION NOTE (csscoverageRunningError, csscoverageNotRunningError,
 # csscoverageNotRunError): Error message that describe things that can go wrong
@@ -27,3 +29,5 @@ csscoverageRunningError=Analiza e mbulimit CSS është në përmbushje e sipër
 csscoverageNotRunningError=Analiza e mbulimit CSS nuk po kryhet
 csscoverageNotRunError=Analiza e mbulimit CSS nuk është filluar
 csscoverageNoRemoteError=Objekti i synuar nuk mbulon Mbulim CSS
+csscoverageOneShotReportError=Raporti i mbulimit CSS nuk është i passhëm për të dhëna 'oneshot'. Ju lutemi, përdorni nise/ndale.
+
