--- a/sl/dom/chrome/layout/css.properties
+++ b/sl/dom/chrome/layout/css.properties
@@ -21,6 +21,8 @@ PEGatherMediaEOF=konec seznama vsebin v pravilu @import ali @media
 PEGatherMediaNotComma=Pričakovan ',' v seznamu vsebin, vendar najden '%1$S'.
 PEGatherMediaNotIdent=Pričakovan določevalec v seznamu vsebin, vendar najden '%1$S'.
 PEGatherMediaReservedMediaType=Pričakovana vrsta predstavnosti, vendar najdena rezervirana beseda '%1$S'.
+PEParseSourceSizeListEOF=vrednost dolžine za ujemajoči pogoj vsebine
+PEParseSourceSizeListNotComma=Pričakovana ',' za vrednostjo, vendar najden '%1$S'
 PEImportNotURI=Pričakovan URL v pravilu @import, vendar najden '%1$S'.
 PEImportBadURI=Neveljaven URI v pravilu @import: '%1$S'.
 PEImportUnexpected=Najden nepričakovan '%1$S' znotraj @import.
@@ -44,6 +46,14 @@ PESelectorListExtraEOF=',' ali '{'
 PESelectorListExtra=Pričakovan ',' ali '{', vendar najden '%1$S'.
 PESelectorGroupNoSelector=Pričakovan izbirnik.
 PESelectorGroupExtraCombinator=Viseči kombinator.
+PECounterStyleNotIdent=Pričakovan določevalec za ime pravila @counter-style.
+PECounterStyleBadName=Ime pravila @counter-style ne more biti '%1$S'.
+PECounterStyleBadBlockStart=Pričakovan '{' na začetku pravila @counter-style, vendar najden '%1$S'.
+PECounterStyleEOF=končni '}' bloka @counter-style
+PECounterDescExpected=Pričakovan opisnik števca, vendar najden '%1$S'.
+PEUnknownCounterDesc=Neznan opisnik '%1$S' v pravilu @counter-style.
+PECounterExtendsNotIdent=Pričakovan določevalec razširitvenega sistema, vendar najden '%1$S'.
+PECounterASWeight=Vsaka utež v opisniku dodatnih simbolov mora biti manjša od prejšnje uteži.
 PEClassSelEOF=ime razreda
 PEClassSelNotIdent=Pričakovan določevalec za izbirnika razreda, vendar najden '%1$S'.
 PETypeSelEOF=vrsta elementa
