--- a/sl/dom/chrome/xslt/xslt.properties
+++ b/sl/dom/chrome/xslt/xslt.properties
@@ -10,10 +10,10 @@
 6  = Slogovna predloga XSLT (morda) vsebuje rekurzijo.
 7  = Vrednost atributa XSLT 1.0 ni veljavna.
 8  = Izraz XPath bi moral vrniti NodeSet.
-9  = Transformacija XSLT je bila prekinjena s strani <xsl\:message>.
-10 = Prišlo je do mrežne napake ob nalaganju stylesheeta XSLT\:
-11 = Slogovna predloga XSLT nima vrste MIME XML\:
-12 = Slogovna predloga XSLT se posredno ali neposredno uvozi ali vključi\:
+9  = Transformacija XSLT je bila prekinjena s strani <xsl:message>.
+10 = Prišlo je do mrežne napake ob nalaganju stylesheeta XSLT:
+11 = Slogovna predloga XSLT nima vrste MIME XML:
+12 = Slogovna predloga XSLT se posredno ali neposredno uvozi ali vključi:
 13 = Funkcija XPath je bila poklicana z napačnim številom argumentov.
 14 = Neznana funkcija razširitve XPath je bila klicana.
 15 = Napaka pri razčlenjevanju XPath: pričakovan ')':
