--- a/sl/dom/chrome/plugins.properties
+++ b/sl/dom/chrome/plugins.properties
@@ -19,3 +19,6 @@ state_disabled=Onemogočeno
 mimetype_label=Vrsta MIME
 description_label=Opis
 suffixes_label=Končnice
+
+openH264_name=Video kodek OpenH264 podjetja Cisco Systems, Inc.
+openH264_description=Predvajajte spletni video in uporabljajte videokonference.
